Gebruik 'Number.valueOf' ipv 'new Number'
svn path=/onderwijs/intern/openedge/openedge-baritus/trunk/; revision=145344