@@ -31,9 +31,8 @@
 
 package nl.openedge.baritus.converters;
 
-
-import java.util.Locale;
 import java.text.ParseException;
+import java.util.Locale;
 
 /**
  * localized byte converter
@@ -45,39 +44,30 @@ public class ByteLocaleConverter extends DecimalLocaleConverter
 	// ----------------------------------------------------------- Constructors
 
 	/**
-	 * Create a {@link LocaleConverter}
-	 * that will throw a {@link ConversionException}
-	 * if a conversion error occurs. The locale is the default locale for
-	 * this instance of the Java Virtual Machine and an unlocalized pattern is used
-	 * for the convertion.
-	 *
+	 * Create a {@link LocaleConverter} that will throw a {@link ConversionException} if a
+	 * conversion error occurs. The locale is the default locale for this instance of the
+	 * Java Virtual Machine and an unlocalized pattern is used for the convertion.
 	 */
 	public ByteLocaleConverter()
 	{
 		this(Locale.getDefault());
 	}
 
-
 	/**
-	 * Create a {@link LocaleConverter}
-	 * that will throw a {@link ConversionException}
-	 * if a conversion error occurs. An unlocalized pattern is used for the convertion.
-	 *
-	 * @param locale        The locale
+	 * Create a {@link LocaleConverter} that will throw a {@link ConversionException} if a
+	 * conversion error occurs. An unlocalized pattern is used for the convertion.
+	 * @param locale The locale
 	 */
 	public ByteLocaleConverter(Locale locale)
 	{
 		this(locale, null);
 	}
 
-
 	/**
-	 * Create a {@link LocaleConverter}
-	 * that will throw a {@link ConversionException}
-	 * if a conversion error occurs. An unlocalized pattern is used for the convertion.
-	 *
-	 * @param locale        The locale
-	 * @param pattern       The convertion pattern
+	 * Create a {@link LocaleConverter} that will throw a {@link ConversionException} if a
+	 * conversion error occurs. An unlocalized pattern is used for the convertion.
+	 * @param locale The locale
+	 * @param pattern The convertion pattern
 	 */
 	public ByteLocaleConverter(Locale locale, String pattern)
 	{
@@ -86,18 +76,13 @@ public class ByteLocaleConverter extends DecimalLocaleConverter
 	}
 
 	/**
-	 * Create a {@link LocaleConverter}
-	 * that will throw a {@link ConversionException}
-	 * if a conversion error occurs.
-	 *
-	 * @param locale        The locale
-	 * @param pattern       The convertion pattern
-	 * @param locPattern    Indicate whether the pattern is localized or not
+	 * Create a {@link LocaleConverter} that will throw a {@link ConversionException} if a
+	 * conversion error occurs.
+	 * @param locale The locale
+	 * @param pattern The convertion pattern
+	 * @param locPattern Indicate whether the pattern is localized or not
 	 */
-	public ByteLocaleConverter(
-		Locale locale,
-		String pattern,
-		boolean locPattern)
+	public ByteLocaleConverter(Locale locale, String pattern, boolean locPattern)
 	{
 
 		super(locale, pattern, locPattern);
@@ -106,35 +91,29 @@ public class ByteLocaleConverter extends DecimalLocaleConverter
 	/**
 	 * Convert the specified locale-sensitive input object into an output object of the
 	 * specified type. This method will return values of type Byte.
-	 *
 	 * @param value The input object to be converted
 	 * @param pattern The pattern is used for the convertion
-	 *
-	 * @exception ConversionException if conversion cannot be performed
-	 *  successfully
+	 * @exception ConversionException if conversion cannot be performed successfully
 	 */
 	protected Object parse(Object value, String pattern) throws ParseException
 	{
 		final Number parsed = (Number) super.parse(value, pattern);
 		if (parsed.longValue() != parsed.byteValue())
 		{
-			throw new ConversionException(
-				"Supplied number is not of type Byte: " + parsed.longValue());
+			throw new ConversionException("Supplied number is not of type Byte: "
+					+ parsed.longValue());
 		}
 		// now return property Byte
-		return new Byte(parsed.byteValue());
+		return Byte.valueOf(parsed.byteValue());
 	}
-	
+
 	/**
 	 * Convert the specified locale-sensitive input object into an output object of the
 	 * specified type.
-	 *
 	 * @param type Data type to which this value should be converted
 	 * @param value The input object to be converted
 	 * @param pattern The pattern is used for the convertion
-	 *
-	 * @exception ConversionException if conversion cannot be performed
-	 *  successfully
+	 * @exception ConversionException if conversion cannot be performed successfully
 	 */
 	public Object convert(Class type, Object value, String pattern)
 	{
@@ -142,9 +121,9 @@ public class ByteLocaleConverter extends DecimalLocaleConverter
 		{
 			return null;
 		}
-		
+
 		Number temp = getNumber(value, pattern);
-		
-		return (temp instanceof Byte) ? (Byte)temp : new Byte(temp.byteValue());
+
+		return (temp instanceof Byte) ? (Byte) temp : Byte.valueOf(temp.byteValue());
 	}
 }
